# solana-proofs

./: .gitignore  Cargo.toml  README.md  fee_payer.json  my-keypair.json  package.json
contract/: Verifier.sol
contracts/: Verifier.sol
src/: main.rs  zk_proof.rs
test/: Verifier.test.js
tests/: truffle-config.js
tests/contracts/: Verifier.sol
tests/test/: Verifier.test.js  proof_3CfG5gkkFzLd7avVrZ4Go4vZTKs69pUrQZj2dzbRMoWj2j3s8NeNvA7QqmMiqiruiRaVzifwiaGohWvnMvGWeLKB.json  verification_key.json
