[package]
name = "solana-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.9.0"
solana-sdk = "1.9.0"
solana-transaction-status = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bellman = "0.14.0"
ff = "0.13.0"
rand = "0.8.4"
blstrs = "0.7.1"
sha2 = "0.10.8"